--- a/Presentation/App.Web/Views/Account/Login.cshtml
+++ b/Presentation/App.Web/Views/Account/Login.cshtml
@@ -12,8 +12,8 @@
             <div class="row">
                 <div class="col-xl-7 col-xxl-8">
                     <a href="~/Modern/main/index.html" class="text-nowrap logo-img d-block px-4 py-9 w-100">
-                        <img src="~/Modern/assets/images/logos/dark-logo.svg" class="dark-logo" alt="Logo-Dark" />
-                        <img src="~/Modern/assets/images/logos/light-logo.svg" class="light-logo" alt="Logo-light" />
+                        <img src="~/Modern/assets/images/logos/logo.png" class="dark-logo" alt="Logo-Dark" />
+                        <img src="~/Modern/assets/images/logos/logo.png" class="light-logo" alt="Logo-light" />
                     </a>
                     <div class="d-none d-xl-flex align-items-center justify-content-center h-n80">
                         <img src="~/Modern/assets/images/backgrounds/login-security.svg" alt="modernize-img" class="img-fluid" width="500">
@@ -22,9 +22,9 @@
                 <div class="col-xl-5 col-xxl-4">
                     <div class="authentication-login min-vh-100 bg-body row justify-content-center align-items-center p-4">
                         <div class="auth-max-width col-sm-8 col-md-6 col-xl-7 px-4">
-                            <h2 class="mb-1 fs-7 fw-bolder">Welcome to Modernize</h2>
+                            <h2 class="mb-1 fs-7 fw-bolder">Welcome to SuperVesion</h2>
                             <p class="mb-7">Your Admin Dashboard</p>
-@*                             <div class="row">
+                            @*                             <div class="row">
                                 <div class="col-6 mb-2 mb-sm-0">
                                     <a class="btn text-dark border fw-normal d-flex align-items-center justify-content-center rounded-2 py-8" href="javascript:void(0)" role="button">
                                         <img src="~/Modern/assets/images/svgs/google-icon.svg" alt="modernize-img" class="img-fluid me-2" width="18" height="18">
@@ -48,14 +48,14 @@
                             </div>
                             <form asp-action="Login" method="post">
                                 <div class="mb-3">
-@*                                     <label for="exampleInputEmail1" class="form-label">Username</label>
+                                    @*                                     <label for="exampleInputEmail1" class="form-label">Username</label>
                                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"> *@
                                     <label asp-for="Username" class="form-label"></label>
                                     <input asp-for="Username" class="form-control" />
                                     <span asp-validation-for="Username" class="text-danger"></span>
                                 </div>
                                 <div class="mb-4">
-@*                                     <label for="exampleInputPassword1" class="form-label">Password</label>
+                                    @*                                     <label for="exampleInputPassword1" class="form-label">Password</label>
                                     <input type="password" class="form-control" id="exampleInputPassword1"> *@
                                     <label asp-for="Password" class="form-label"></label>
                                     <input asp-for="Password" class="form-control" type="password" placeholder="Enter your password" />
@@ -63,17 +63,17 @@
                                 </div>
                                 <div class="d-flex align-items-center justify-content-between mb-4">
                                     <div class="form-check">
-@*                                         <input class="form-check-input primary" type="checkbox" value="" id="flexCheckChecked" checked>
+                                        @*                                         <input class="form-check-input primary" type="checkbox" value="" id="flexCheckChecked" checked>
                                         <label class="form-check-label text-dark fs-3" for="flexCheckChecked"></label> *@
 
-                                            <input asp-for="RememberMe" class="form-check-input primary" type="checkbox" checked />
-                                            <label asp-for="RememberMe" type="checkbox" class="form-check-label"></label>
-                                            
+                                        <input asp-for="RememberMe" class="form-check-input primary" type="checkbox" checked />
+                                        <label asp-for="RememberMe" type="checkbox" class="form-check-label"></label>
+
                                     </div>
                                     <a class="text-primary fw-medium fs-3" href="~/Modern/main/authentication-forgot-password.html">Forgot Password ?</a>
                                 </div>
                                 <button type="submit" class="btn btn-primary w-100 py-8 mb-4 rounded-2">Sign In</button>
-@*                                 <div class="d-flex align-items-center justify-content-center">
+                                @*                                 <div class="d-flex align-items-center justify-content-center">
                                     <p class="fs-4 mb-0 fw-medium">New to Modernize?</p>
                                     <a class="text-primary fw-medium ms-2" href="~/Modern/main/authentication-register.html">
                                         Create an
